--- a/app.css
+++ b/app.css
@@ -57,6 +57,7 @@ body {
     font-size: 1em;
     color: white;
     background-color: rgb(246, 16, 123);
+    cursor: pointer;
     transition: all .2s ease-in-out;
   }
   
